2007-06-30    <Daddy@C-3PO>

	* lib/WWW/Search/Ask.pm (parse_tree): fix for new page format

2007-04-21    <Daddy@C-3PO>

	* lib/WWW/Search/Ask.pm: first working version