@@ -1,0 +1,2 @@
+
+This software is released under the same license as Perl itself.
