@@ -8,6 +8,7 @@ inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/WWW/Search/Ask.pm
+LICENSE
 Makefile.PL
 MANIFEST			This list of files
 META.yml
