@@ -1,17 +1,18 @@
 ---
 abstract: 'class for searching www.search.com'
 author:
-  - 'C<WWW::Search::Ask> was originally written by Martin Thurn,'
+  - 'Originally written by Martin Thurn,'
 build_requires:
   Test::More: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
+  WWW::Search::Test: 2.287
 distribution_type: module
-generated_by: 'Module::Install version 0.75'
+generated_by: 'Module::Install version 0.77'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 module_name: WWW::Search::Ask
 name: WWW-Search-Ask
 no_index:
@@ -22,4 +23,6 @@ requires:
   Carp: 0
   WWW::Search: 0
   perl: 5.004
-version: 1.009
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.011
